--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
-# https://dart.dev/guides/libraries/private-files
-# Created by `dart pub`
-.dart_tool/
+.*
+_*
 
-# Avoid committing pubspec.lock for library packages; see
-# https://dart.dev/guides/libraries/private-files#pubspeclock.
-pubspec.lock
+!.gitignore
+!.github
