--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,15 +7,11 @@ on:
 jobs:
   test:
     name: Run tests ${{matrix.sdk}} on ${{matrix.os}}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        sdk: ['stable']
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
       - uses: dart-lang/setup-dart@v1
         with:
-          sdk: ${{ matrix.sdk }}
+          sdk: 'stable'
       - uses: actions/checkout@v4
       - run: dart --version
       - run: dart pub get
