--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,7 +17,7 @@ jobs:
       - run: dart pub get
       - run: dart analyze --fatal-infos .
       - run: dart tool/generate_client.dart
-      - run: (cd test && docker compose up -d)
+      - run: (cd test && docker compose up)
       - run: dart test
       - run: (cd test && docker compose down --volumes)
       - run: dart tool/prepare_submit.dart
