--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,21 +7,19 @@ on:
 jobs:
   test:
     name: Run tests ${{matrix.sdk}} on ${{matrix.os}}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        sdk: ['stable']
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
       - uses: dart-lang/setup-dart@v1
         with:
-          sdk: ${{ matrix.sdk }}
+          sdk: 'stable'
       - uses: actions/checkout@v4
       - run: dart --version
       - run: dart pub get
       - run: dart analyze --fatal-infos .
-      - run: dart test
       - run: dart tool/generate_client.dart
+      - run: (cd test && docker compose up --wait)
+      - run: dart test
+      - run: (cd test && docker compose down --volumes)
       - run: dart tool/prepare_submit.dart
       - name: "check for uncommitted changes"
         run: git diff --exit-code
