--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -16,35 +16,6 @@ services:
     volumes:
       - db_data:/var/lib/postgresql/data
 
-  search:
-    image: opensearchproject/opensearch:2.11.0
-    environment:
-      cluster.name: fusionauth
-      discovery.type: single-node
-      node.name: search
-      plugins.security.disabled: true
-      bootstrap.memory_lock: true
-      OPENSEARCH_JAVA_OPTS: ${OPENSEARCH_JAVA_OPTS}
-    healthcheck:
-      interval: 10s
-      retries: 80
-      test: curl --write-out 'HTTP %{http_code}' --fail --silent --output /dev/null http://localhost:9200/
-    restart: unless-stopped
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-      nofile:
-        soft: 65536
-        hard: 65536
-    ports:
-      - 9200:9200 # REST API
-      - 9600:9600 # Performance Analyzer
-    volumes:
-      - search_data:/usr/share/opensearch/data
-    networks:
-      - search_net
-
   mailcatcher:
     image: sj26/mailcatcher
     ports:
@@ -62,8 +33,6 @@ services:
     depends_on:
       db:
         condition: service_healthy
-      search:
-        condition: service_healthy
       mailcatcher:
         condition: service_healthy
     environment:
@@ -75,8 +44,7 @@ services:
       FUSIONAUTH_APP_MEMORY: ${FUSIONAUTH_APP_MEMORY}
       FUSIONAUTH_APP_RUNTIME_MODE: ${FUSIONAUTH_APP_RUNTIME_MODE}
       FUSIONAUTH_APP_URL: http://fusionauth:9011
-      SEARCH_SERVERS: http://search:9200
-      SEARCH_TYPE: elasticsearch
+      SEARCH_TYPE: database
       FUSIONAUTH_APP_KICKSTART_FILE: /usr/local/fusionauth/kickstart/kickstart.json
     healthcheck:
       test: curl --silent --fail http://localhost:9011/api/status -o /dev/null -w "%{http_code}"
@@ -85,7 +53,6 @@ services:
       retries: 5
     networks:
       - db_net
-      - search_net
       - mailcatcher_net
     restart: unless-stopped
     ports:
@@ -97,12 +64,9 @@ services:
 networks:
   db_net:
     driver: bridge
-  search_net:
-    driver: bridge
   mailcatcher_net:
     driver: bridge
 
 volumes:
   db_data:
   fusionauth_config:
-  search_data:
